Fix issue with date picker picking a year at the end of the range and the date being rejected because the calendar day took the selection outside of range
When the date picker is in use, it is one frequent scenario to leave the date
in the calendar as it is, go to change the year, and when that is set to come
back and adjust the date.  If the date range is limited with minDate and/or
maxDate, it is quite possible that selecting the year will mean that leaving the
calendar selected date unchanged will take you outside of the range of allowable
dates.

The current solution is to return you to the old date.  This is confusing, and
when you find out what has happened frustrating for the user.  So what this
commit does is when the date change takes you outside of the allowable range, it
to change the date to the minDate, if the selection was before the minDate and
to change it to maxDate if the selection was after the maxDate.

This is far less confusing to the user, but still maintains the integrity of the
dates within the permissable range.

--- a/paper-calendar.html
+++ b/paper-calendar.html
@@ -171,7 +171,7 @@
       is: 'paper-calendar',
       properties: {
         /**
-         * The currently selected month (1-12) 
+         * The currently selected month (1-12)
          */
         currentMonth: {
           type: Number
@@ -265,9 +265,17 @@
           return;
         }
         if (!this._withinValidRange(date)) {
-          console.warn('Date outside of valid range: ' + date);
-          this.date = oldValue;
-          return;
+          if (this.minDate && date < this.minDate) {
+            date = this.minDate;
+          } else {
+            if (this.maxDate && date > this.maxDate) {
+              date = this.maxDate
+            } else {
+              console.warn('Date outside of valid range: ' + date);
+              this.date = date = oldValue;
+              return;
+            }
+          }
         }
         this.currentYear = date.getFullYear();
         this.currentMonth = date.getMonth() + 1;
@@ -359,7 +367,7 @@
         } else {
           this._nextMonth();
         }
-      }, 
+      },
       _onTrack: function(event) {
         var dx = event.detail.dx;
         var dy = event.detail.dy;
@@ -519,7 +527,7 @@
         }
         this._scrollWidth = (this.$.calendar.offsetWidth * this._months.length);
         this.$.months.style.minWidth = this._scrollWidth + 'px';
-        var i = ((this.currentYear * 12) + this.currentMonth) - 
+        var i = ((this.currentYear * 12) + this.currentMonth) -
                  ((this._months[0].year * 12) + this._months[0].month);
         this._translateX(-i * this._containerWidth);
       },
@@ -589,7 +597,7 @@
         return moment.isDate(date)
             && (!this.minDate || date >= this.minDate)
             && (!this.maxDate || date <= this.maxDate);
-      } 
+      }
     });
    })();
   </script>
